--- a/guthrie/css/guthrie.css
+++ b/guthrie/css/guthrie.css
@@ -2,9 +2,10 @@
 	clear: both;
 }
 .profile-field-values {
-	background: rgba(246, 246, 246, .7);
-	border-radius: 8px;
-	border: 2px solid #464646;
+	background: url(square_bg.png) rgba(248, 248, 248, .6);
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;	border: 2px solid #464646;
 	line-height: 1.5em;
 	padding: 8px 8px 16px 8px;
 }
